--- a/clinica/WebContent/CSS/CSS.css
+++ b/clinica/WebContent/CSS/CSS.css
@@ -1,10 +1,42 @@
 @charset "UTF-8";
 
 #topo{
-        width:100%; 
-        height: 100px;
-        background-color: #FFE4C4;
-        float: left;
-        text-align: center;
-        color:#C71585;
-    }
+    width:100%; 
+    height: 100px;
+    background-color: #FFE4C4;
+    float: left;
+    text-align: center;
+    color:#C71585;
+}
+
+#rodape{
+    width: 100%;
+    height: 100px;
+    background-color: #FFE4B5;
+    float: left;
+    text-align: center;	
+}
+
+#lateral{
+    width: 20%;
+    height: 600px;
+    background-color: #F5F5DC;
+    float: left;
+}
+
+.especialidade{
+    width: 100%;
+    height: 200px;
+    float: left;
+}
+
+.descricao{
+    width: 80%;
+    height: 200px;
+    float: left;
+}
+    
+.imagem{
+    width: 160px;
+    height: 160px;
+}
